[WK2] PluginInformation.cpp fails to build because of missing ENABLE(NETSCAPE_PLUGIN_API) guard https://bugs.webkit.org/show_bug.cgi?id=116018

Rubber-stamped by Jocelyn Turcotte.

* Shared/Plugins/Netscape/PluginInformation.cpp:
(WebKit::getPluginModuleInformation):

Canonical link: https://commits.webkit.org/134606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150178 268f45cc-cd09-0410-ab3c-d52691b4dbfc